# ISTAnnouncements

./: .gitignore  AppConfig.toml  Cargo.toml  flake.nix  nixosModule.nix  package.nix  shell.nix
nix/: nixosModule.nix  package.nix  shell.nix
src/: announcement.rs  config.rs  db.rs  handlers.rs  main.rs  workers.rs
src/db/: mod.rs  structs.rs
src/workers/: discord.rs  rss_reader.rs  storage.rs
src/workers/discord/: structs.rs
web/: courses.css  courses.html  courses.js  index.css  index.html  index.js
