[package]
name = "ist_announcements"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
clap = { version = "4.5.41", features = ["derive"] }
html2md = "0.2.14"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
rss = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "sqlite",
    "sqlx-macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
